# iSDR_p

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  MxNE.gcda  MxNE.gcno  README.md  ReadWriteMat.gcda  ReadWriteMat.gcno  iSDR.gcda  iSDR.gcno  iSDR_cv.cpp  main.cpp  main_cv.cpp  requirements.txt  run.sh  test_MxNE_iSDR.gcda  test_MxNE_iSDR.gcno
cmake/: FindMKL.cmake  Findmatio.cmake
examples/: Brain_network.gv  S1_p1_30.mat  example_real_data.ipynb  results_p3.mat  results_p3_3.mat
examples/.ipynb_checkpoints/: example_real_data-checkpoint.ipynb
iSDR/: iSDR_p  iSDR_results_p2.mat
inc/: CV_iSDR.h  Matrix.h  MxNE.h  ReadWriteMat.h  iSDR.h
python_wrapp/: PyiSDRcpp.cpp  PyiSDRcpp.h  PyiSDRcpp.i  PyiSDRcpp.py  README.md  example_pyiSDR.ipynb  example_pyiSDR.py  iSDR_modulecpp.cpp  iSDRmodule.py  run_swig.sh  run_swigcpp.sh  setup.py  test.py  test_real  test_real.py
src/: CMakeLists.txt  CV_iSDR.cpp  MxNE.cpp  ReadWriteMat.cpp  iSDR.cpp
test/: CMakeLists.txt  iSDR_results_p2.mat  profile-data.txt  simulated_data_p2.mat  test_MxNE_iSDR  test_MxNE_iSDR.cpp
